[package]
name = "breakout"
version = "0.1.0"
edition = "2024"

[dependencies]
avian2d = "0.3.1"
bevy = { version = "0.16.1", features = ["bevy_audio", "wav"] }
log = { version = "0.4.27", features = [
    "max_level_debug",
    "release_max_level_warn",
] }


[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
