[package]
name = "breakout"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { version = "0.16.1", features = ["wav"] }
avian2d = "0.3.1"
log = { version = "0.4.27", features = [
    "max_level_debug",
    "release_max_level_warn",
] }
bevy_embedded_assets = "0.13.0"
rand = "0.9.2"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "thin"
